JDK_new_features_study_notes